Tiger_frontend/project1_test_code_example/tests/correct/var-float-init-int.tiger
main let
        var a, b : float := 2;
in begin
        if(a == b) then
                a := b + 2;
		else
				a := 2;
        endif;
        printi(a);
end
