Tiger_frontend/project1_test_code_example/tests/errors/function-call-varname.tiger
main let
    var x : int;
    function print ( ) begin
            printi(7);
    end;
in begin
    x(8,9);
end
